--- a/templates/student/studentlogin.html
+++ b/templates/student/studentlogin.html
@@ -60,7 +60,7 @@
     margin: 20px auto;
     text-align: center;
     border: 2px solid #2ecc71;
-    padding: 14px 40px;
+    padding: 8px 40px;
     outline: none;
     color: white;
     border-radius: 24px;
@@ -77,11 +77,11 @@
   </head>
   <body>
     {% include "quiz/navbar.html" %}
-    <div class="container">
+    <div class="container" style="border-radius: 50px;border: 1px solid red;">
     <div class="row">
         <div class="col-md-6">
             <div class="card">
-                <form class="box" method="post">
+                <form class="box" method="post" style="border-radius: 20px;">
                     {% csrf_token %}
                     <h1>Student Login</h1>
                     <p class="text-muted"> Please enter your login and password!</p>
@@ -99,6 +99,6 @@
 <br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br>
-{% include "quiz/footer.html" %}
+
   </body>
 </html>
